--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
       --nav-color: #1a1a2e;
       --link-color: #3498db;
       --header-height: 120px;
-      --content-width: min(calc(100% - 2rem), 1200px);
-      --spacing-unit: 0.75rem; /* Reduced from 1rem */
+      /* Modified content width to reduce side margins by 2cm (approximately 75.6px) on each side */
+      --content-width: min(calc(100% - 4cm), 1351.2px);
+      --spacing-unit: 0.75rem;
     }
 
-    /* Reset and Base Styles */
+    /* Rest of the CSS remains the same */
     * {
       box-sizing: border-box;
       margin: 0;
@@ -33,7 +34,7 @@
 
     body {
       font-family: 'Arial', sans-serif;
-      line-height: 1.8; /* Reduced from 2.2 */
+      line-height: 1.8;
       color: var(--text-color);
       background-color: var(--background-color);
       overflow-x: hidden;
@@ -49,7 +50,7 @@
 
     .navbar {
       margin: 0;
-      padding: 0.25rem 0; /* Reduced from 0.5rem */
+      padding: 0.25rem 0;
       width: 100%;
       background-color: transparent;
       display: flex;
@@ -61,10 +62,10 @@
     .navbar a {
       color: #000;
       text-decoration: none;
-      margin: 0 8px; /* Reduced from 10px */
+      margin: 0 8px;
       font-weight: normal;
       font-size: clamp(0.9rem, 2.5vw, 1.1rem);
-      padding: 4px 8px; /* Reduced from 5px 10px */
+      padding: 4px 8px;
       border-radius: 3px;
       white-space: nowrap;
     }
@@ -80,7 +81,7 @@
       position: relative;
       text-align: center;
       background-color: transparent;
-      padding: 0.25rem 0; /* Reduced from 0.5rem */
+      padding: 0.25rem 0;
       box-shadow: none;
       height: var(--header-height);
       margin: 0;
@@ -90,12 +91,12 @@
     .content {
       width: var(--content-width);
       margin: 0 auto;
-      padding: clamp(0.75rem, 2vw, 1.5rem); /* Reduced from 1rem, 3vw, 2rem */
+      padding: clamp(0.75rem, 2vw, 1.5rem);
     }
 
     /* Section Styling */
     section {
-      margin-bottom: 2rem; /* Reduced from 3rem */
+      margin-bottom: 2rem;
     }
 
     h1, h2, h3 {
@@ -105,26 +106,26 @@
 
     h1 {
       font-size: clamp(1.5rem, 4vw, 2rem);
-      margin-bottom: 0.75rem; /* Added reduced margin */
+      margin-bottom: 0.75rem;
     }
 
     h2 {
       font-size: clamp(1.3rem, 3.5vw, 1.8rem);
       border-bottom: 2px solid var(--secondary-color);
-      padding-bottom: 0.2em; /* Reduced from 0.3em */
-      margin-bottom: 0.75rem; /* Added reduced margin */
+      padding-bottom: 0.2em;
+      margin-bottom: 0.75rem;
     }
 
     h3 {
       font-size: clamp(1.1rem, 3vw, 1.4rem);
       color: var(--secondary-color);
-      margin-bottom: 0.5rem; /* Added reduced margin */
+      margin-bottom: 0.5rem;
     }
 
     p {
       font-size: clamp(0.9rem, 2.5vw, 1rem);
-      margin-bottom: 0.75rem; /* Reduced from 1rem */
-      line-height: 1.6; /* Reduced from 1.8 */
+      margin-bottom: 0.75rem;
+      line-height: 1.6;
     }
 
     /* Profile Image Styling */
@@ -133,7 +134,7 @@
       width: min(350px, 80vw);
       max-width: 100%;
       height: auto;
-      margin: 0.75rem auto; /* Reduced from implied 1rem */
+      margin: 0.75rem auto;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s ease;
@@ -149,13 +150,13 @@
       text-align: center;
       display: flex;
       justify-content: center;
-      gap: 0.75rem; /* Reduced from 1rem */
-      margin-top: 0.75rem; /* Reduced from 1rem */
+      gap: 0.75rem;
+      margin-top: 0.75rem;
     }
 
     .social-links a {
       display: inline-block;
-      padding: 0.4rem 0.8rem; /* Reduced from 0.5rem 1rem */
+      padding: 0.4rem 0.8rem;
       background-color: var(--primary-color);
       color: white;
       font-weight: 600;
@@ -183,12 +184,12 @@
 
     @media (max-width: 480px) {
       .navbar a {
-        padding: 3px 6px; /* Reduced from 4px 8px */
-        margin: 3px; /* Reduced from 4px */
+        padding: 3px 6px;
+        margin: 3px;
       }
 
       .content {
-        padding: 0.5rem; /* Reduced from 1rem */
+        padding: 0.5rem;
       }
     }
 
@@ -212,6 +213,9 @@
       }
     }
   </style>
+
+
+<!-- ***********   MAIN CONTENT STARTS  ************ -->
 
 </head>
 <body>
