--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>Vikrant V. Kamble - Economics PhD Candidate</title>
   
   <!-- Favicon Links -->
-<link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
-<link rel="manifest" href="favicon_io/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+  <link rel="manifest" href="favicon_io/site.webmanifest">
   
   <style>
     /* Root Variables with Breakpoints */
@@ -60,8 +60,8 @@
     }
 
     .header-name {
-      font-size: clamp(2.5rem, 5vw, 3.5rem);
-      font-weight: 700;
+      font-size: clamp(2.3rem, 4.5vw, 3.2rem); /* Slightly reduced size */
+      font-weight: normal; /* Removed bold */
       color: var(--primary-color);
       margin-bottom: 0.5rem;
       line-height: 1.2;
@@ -132,6 +132,12 @@
       font-size: clamp(0.9rem, 2.5vw, 1rem);
       margin-bottom: 0.75rem;
       line-height: 1.6;
+    }
+
+    /* Remove Bullet Points */
+    ul {
+      list-style-type: none;
+      padding-left: 0;
     }
 
     /* Image Styling */
@@ -243,6 +249,8 @@
       }
     }
   </style>
+
+
 
 
 
