--- a/index.html
+++ b/index.html
@@ -5,24 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vikrant V. Kamble - Economics PhD Candidate</title>
   
-  <!-- Favicon Links -->
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
-  <link rel="manifest" href="favicon_io/site.webmanifest">
-  
   <style>
-    /* Root Variables with Breakpoints */
     :root {
       --primary-color: #2F3E56;
       --secondary-color: #4A6FA5;
       --text-color: #2C3E50;
       --background-color: #FFFFFF;
-      --nav-color: #1a1a2e;
-      --link-color: #3498db;
-      --header-height: 160px;
-      --content-width: min(calc(100% - 12cm), 1000px);
-      --spacing-unit: 0.75rem;
     }
 
     * {
@@ -31,222 +19,62 @@
       padding: 0;
     }
 
-    html {
-      font-size: 16px;
-      scroll-behavior: smooth;
-      scroll-padding-top: var(--header-height);
-    }
-
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: Arial, sans-serif;
       line-height: 1.8;
       color: var(--text-color);
       background-color: var(--background-color);
-      overflow-x: hidden;
-      margin: 0;
-      padding: 0;
-    }
-
-    /* Header and Navigation */
-    .header-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: var(--header-height);
-      text-align: center;
-      padding: 2rem 0;
-      margin: 0;
-    }
-
-    .header-name {
-      font-size: clamp(2.3rem, 4.5vw, 3.2rem); /* Slightly reduced size */
-      font-weight: normal; /* Removed bold */
-      color: var(--primary-color);
-      margin-bottom: 0.5rem;
-      line-height: 1.2;
-    }
-
-    .header-role {
-      font-size: clamp(1.5rem, 3vw, 2rem);
-      color: var(--secondary-color);
-      font-weight: 500;
-    }
-
-    .navbar {
-      width: 100%;
-      background-color: transparent;
       display: flex;
       justify-content: center;
-      padding: 0.25rem 0;
-      margin: 0;
+      padding: 20px;
     }
 
-    .navbar a {
-      color: #000;
-      text-decoration: none;
-      margin: 0 8px;
-      font-weight: normal;
-      font-size: clamp(0.9rem, 2.5vw, 1.1rem);
-      padding: 4px 8px;
-      border-radius: 3px;
-      white-space: nowrap;
-    }
-
-    /* Main Content */
-    .content {
-      width: var(--content-width);
-      margin: 0 auto;
-      padding: clamp(0.75rem, 2vw, 1.5rem);
+    .container {
+      display: flex;
       max-width: 1000px;
+      width: 100%;
     }
 
-    section {
-      margin-bottom: 2rem;
+    .sidebar {
+      flex: 1;
+      max-width: 300px;
+      text-align: center;
+      padding-right: 20px;
     }
 
-    h1, h2, h3 {
-      text-align: left;
-      color: var(--primary-color);
+    .sidebar img {
+      width: 100%;
+      border-radius: 10px;
+    }
+
+    .main-content {
+      flex: 2;
+      padding-left: 20px;
     }
 
     h1 {
-      font-size: clamp(1.5rem, 4vw, 2rem);
-      margin-bottom: 0.75rem;
+      font-size: 26px;
+      font-weight: bold;
+      color: var(--primary-color);
     }
 
     h2 {
-      font-size: clamp(1.3rem, 3.5vw, 1.8rem);
-      border-bottom: 2px solid var(--secondary-color);
-      padding-bottom: 0.2em;
-      margin-bottom: 0.75rem;
-    }
-
-    h3 {
-      font-size: clamp(1.1rem, 3vw, 1.4rem);
+      font-size: 20px;
       color: var(--secondary-color);
-      margin-bottom: 0.5rem;
+      margin-top: 20px;
     }
 
-    p {
-      font-size: clamp(0.9rem, 2.5vw, 1rem);
-      margin-bottom: 0.75rem;
-      line-height: 1.6;
+    a {
+      color: #007acc;
+      text-decoration: none;
     }
 
-    /* Remove Bullet Points */
-    ul {
-      list-style-type: none;
-      padding-left: 0;
+    a:hover {
+      text-decoration: underline;
     }
 
-    /* Image Styling */
-    img {
-      display: block;
-      margin: 0 auto;
-      padding: 0;
-    }
-
-    .profile-photo {
-      display: block;
-      width: min(350px, 80vw);
-      max-width: 100%;
-      height: auto;
-      margin: 0.75rem auto;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease;
-      vertical-align: middle;
-    }
-
-    .profile-photo:hover {
-      transform: scale(1.05);
-    }
-
-    /* Social Links */
     .social-links {
-      text-align: center;
-      display: flex;
-      justify-content: center;
-      gap: 0.75rem;
-      margin-top: 0.75rem;
-    }
-
-    .social-links a {
-      display: inline-block;
-      padding: 0.4rem 0.8rem;
-      background-color: var(--primary-color);
-      color: white;
-      font-weight: 600;
-      border-radius: 4px;
-      transition: all 0.3s ease;
-    }
-
-    .social-links a:hover {
-      background-color: var(--secondary-color);
-      transform: translateY(-2px);
-    }
-
-    /* Responsive Styles */
-    @media (max-width: 768px) {
-      :root {
-        --content-width: min(calc(100% - 4cm), 1000px);
-        --header-height: 140px;
-      }
-      
-      .navbar {
-        flex-direction: column;
-        width: 100%;
-      }
-
-      .header-container {
-        padding: 1.5rem 0;
-      }
-
-      .social-links {
-        flex-direction: row;
-        justify-content: center;
-      }
-    }
-
-    @media (max-width: 480px) {
-      :root {
-        --content-width: min(calc(100% - 2cm), 1000px);
-        --header-height: 120px;
-      }
-      
-      .navbar a {
-        padding: 3px 6px;
-        margin: 3px;
-      }
-
-      .header-container {
-        padding: 1rem 0;
-      }
-
-      .content {
-        padding: 0.5rem;
-      }
-    }
-
-    /* Print Styles */
-    @media print {
-      .header-container {
-        position: static;
-        box-shadow: none;
-      }
-
-      .navbar {
-        display: none;
-      }
-
-      .content {
-        margin-top: 0;
-      }
-
-      .social-links {
-        display: none;
-      }
+      margin-top: 10px;
     }
   </style>
 
