--- a/index.html
+++ b/index.html
@@ -309,9 +309,9 @@
   <h3>Research in Progress</h3>
   <ul>
     <li class="new-paper">Intertemporal Elasticity of Labor Supply for Taxicab drivers: Evidence using a new instrument (USA) (co-authored)</li>
-    <li>Labor Market Consequences of Cycling Program using DiD (Non-USA)</li>
+    <li class="new-paper">Labor Market Consequences of Cycling Program using DiD (Non-USA)</li>
     <li class="new-paper">Causal Effects of CTE Pathways and Career Clusters on Secondary and Postsecondary Outcomes (USA) (co-authored)</li>
-    <li>Effect of Medicaid Expansion on Crime in Big Cities (USA) (co-authored)</li>
+    <li class="new-paper">Effect of Medicaid Expansion on Crime in Big Cities (USA) (co-authored)</li>
   </ul>
 </section>
 
