--- a/index.html
+++ b/index.html
@@ -137,6 +137,16 @@
       margin-bottom: 1rem;
     }
 
+            /* Add this CSS code here */
+    #research ul li {
+      margin-bottom: 1rem; /* Adjust the space between research topics */
+    }
+
+    #research p {
+      margin-bottom: 1.5rem; /* Adjust space between publications */
+    }
+
+
     /* New Paper Formatting */
     .new-paper {
       text-indent: 1.5em;
