--- a/index.html
+++ b/index.html
@@ -317,12 +317,26 @@
   <p>"Noncustodial parents, instrumental networks, and child support compliance" with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger. <i>Social Science Research</i>, Volume 110, February 2023, 102850</p>
 
   <h3>Research in Progress</h3>
-  <ul>
-    <li class="new-paper">Intertemporal Elasticity of Labor Supply for Taxicab drivers: Evidence using a new instrument (USA) (co-authored)</li>
-    <li class="new-paper">Labor Market Consequences of Cycling Program using DiD (Non-USA)</li>
-    <li class="new-paper">Causal Effects of CTE Pathways and Career Clusters on Secondary and Postsecondary Outcomes (USA) (co-authored)</li>
-    <li class="new-paper">Effect of Medicaid Expansion on Crime in Big Cities (USA) (co-authored)</li>
-  </ul>
+<ul>
+  <li class="new-paper">
+    Intertemporal Elasticity of Labor Supply for Taxicab drivers: Evidence using a new instrument (USA) (co-authored with
+    <a href="https://swapnil-motghare.github.io/" target="_blank">Swapnil Motghare</a>
+
+  </li>
+  <li class="new-paper">
+    Labor Market Consequences of Cycling Program using DiD (on India) 
+  </li>
+  <li class="new-paper">
+    Causal Effects of CTE Pathways and Career Clusters on Secondary and Postsecondary Outcomes (USA) (co-authored with 
+    <a href="https://scholar.google.com/citations?user=x1gyyigAAAAJ&hl=en" target="_blank"> Dr. Kenneth Shores</a>, 
+    <a href="https://www.education.udel.edu/grad-student/jesse-eze/" target="_blank"> Jesse Eze</a>)
+  </li>
+  <li class="new-paper">
+    Effect of Medicaid Expansion on Crime in Big Cities (USA) (co-authored by 
+    <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Usman Taj</a>)
+  </li>
+</ul>
+
 </section>
 
 
@@ -355,7 +369,7 @@
       <p class="indent">Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></p>
     </li>
     <li>ECON422: Econometric Methods and Models
-      <p class="indent">Fall 2022, Fall 2023, Spring 2024, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a> and <a href="https://lerner.udel.edu/faculty-staff-directory/olga-gorbachev/" target="_blank">Dr. Olga Gorbachev</a></p>
+      <p class="indent">Fall 2022, Fall 2023, Spring 2024, Fall 2024, Spring 2025 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a> and <a href="https://lerner.udel.edu/faculty-staff-directory/olga-gorbachev/" target="_blank">Dr. Olga Gorbachev</a></p>
     </li>
   </ul>
 </section>
