--- a/index.html
+++ b/index.html
@@ -328,11 +328,11 @@
   </li>
   <li class="new-paper">
     Causal Effects of CTE Pathways and Career Clusters on Secondary and Postsecondary Outcomes (USA) (co-authored with 
-    <a href="https://scholar.google.com/citations?user=x1gyyigAAAAJ&hl=en" target="_blank"> Dr. Kenneth Shores</a>, 
+    <a href="https://scholar.google.com/citations?user=x1gyyigAAAAJ&hl=en" target="_blank"> Dr. Kenneth Shores</a> and
     <a href="https://www.education.udel.edu/grad-student/jesse-eze/" target="_blank"> Jesse Eze</a>)
   </li>
   <li class="new-paper">
-    Effect of Medicaid Expansion on Crime in Big Cities (USA) (co-authored by 
+    Effect of Medicaid Expansion on Crime in Big Cities (USA) (co-authored with 
     <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Usman Taj</a>)
   </li>
 </ul>
