--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <link rel="manifest" href="favicon_io/site.webmanifest">
   
   <style>
-    /* Root Variables */
     :root {
       --primary-color: #2F3E56;
       --secondary-color: #4A6FA5;
@@ -31,18 +30,11 @@
       padding: 0;
     }
 
-    html {
-      font-size: 16px;
-      scroll-behavior: smooth;
-      scroll-padding-top: var(--header-height);
-    }
-
     body {
       font-family: 'Arial', sans-serif;
       line-height: 1.8;
       color: var(--text-color);
       background-color: var(--background-color);
-      overflow-x: hidden;
       margin: 0;
       padding: 0;
     }
@@ -55,7 +47,8 @@
       justify-content: center;
       height: var(--header-height);
       text-align: center;
-      padding: 3rem 0 2rem; /* Increased top padding for space above name */
+      padding: 3rem 0 2rem; /* Added space above name */
+      border-bottom: 2px solid var(--secondary-color); /* Restored line below header */
     }
 
     .header-name {
@@ -88,13 +81,7 @@
       text-decoration: underline;
     }
 
-    .header-divider {
-      width: 50%;
-      height: 2px;
-      background-color: var(--secondary-color);
-      margin-top: 1rem;
-    }
-
+    /* Navigation */
     .navbar {
       width: 100%;
       background-color: transparent;
@@ -114,19 +101,140 @@
       white-space: nowrap;
     }
 
+    /* Main Content */
+    .content {
+      width: var(--content-width);
+      margin: 0 auto;
+      padding: clamp(0.75rem, 2vw, 1.5rem);
+      max-width: 1000px;
+    }
+
+    section {
+      margin-bottom: 2rem;
+    }
+
+    h1, h2, h3 {
+      text-align: left;
+      color: var(--primary-color);
+    }
+
+    h1 {
+      font-size: clamp(1.5rem, 4vw, 2rem);
+      margin-bottom: 0.75rem;
+    }
+
+    h2 {
+      font-size: clamp(1.3rem, 3.5vw, 1.8rem);
+      border-bottom: 2px solid var(--secondary-color);
+      padding-bottom: 0.2em;
+      margin-bottom: 0.75rem;
+    }
+
+    h3 {
+      font-size: clamp(1.1rem, 3vw, 1.4rem);
+      color: var(--secondary-color);
+      margin-bottom: 0.5rem;
+    }
+
+    p {
+      font-size: clamp(0.9rem, 2.5vw, 1rem);
+      margin-bottom: 0.75rem;
+      line-height: 1.6;
+    }
+
+    /* Remove Bullet Points */
+    ul {
+      list-style-type: none;
+      padding-left: 0;
+    }
+
+    /* Profile Photo */
+    .profile-photo {
+      display: block;
+      width: min(350px, 80vw);
+      max-width: 100%;
+      height: auto;
+      margin: 0.75rem auto;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease;
+      vertical-align: middle;
+    }
+
+    .profile-photo:hover {
+      transform: scale(1.05);
+    }
+
+    /* Social Links */
+    .social-links {
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      gap: 0.75rem;
+      margin-top: 0.75rem;
+    }
+
+    .social-links a {
+      display: inline-block;
+      padding: 0.4rem 0.8rem;
+      background-color: var(--primary-color);
+      color: white;
+      font-weight: 600;
+      border-radius: 4px;
+      transition: all 0.3s ease;
+    }
+
+    .social-links a:hover {
+      background-color: var(--secondary-color);
+      transform: translateY(-2px);
+    }
+
     /* Responsive Styles */
     @media (max-width: 768px) {
+      :root {
+        --content-width: min(calc(100% - 4cm), 1000px);
+        --header-height: 140px;
+      }
+      
+      .navbar {
+        flex-direction: column;
+      }
+
       .header-container {
-        padding: 2.5rem 0;
+        padding: 1.5rem 0;
+      }
+
+      .social-links {
+        flex-direction: row;
+        justify-content: center;
       }
     }
 
     @media (max-width: 480px) {
+      :root {
+        --content-width: min(calc(100% - 2cm), 1000px);
+        --header-height: 120px;
+      }
+      
+      .navbar a {
+        padding: 3px 6px;
+        margin: 3px;
+      }
+
       .header-container {
-        padding: 2rem 0;
+        padding: 1rem 0;
+      }
+
+      .content {
+        padding: 0.5rem;
       }
     }
   </style>
+
+
+
+
+
 
 
 
@@ -146,8 +254,8 @@
     <h1 class="header-name">Vikrant V. Kamble</h1>
     <p class="header-role">Economics PhD Candidate</p>
     <p class="header-email">Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
-    <div class="header-divider"></div> <!-- Line below the header -->
   </header>
+
 
   <nav class="navbar">
     <a href="#home">Home</a>
